--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://developerfolio.js.org/",
-  "name": "saadpasta.github.io",
+  "name": "ryan.y.pinto",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
