integrate to netlify

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://developerfolio.js.org/",
+  "homepage": "https://ryanyuri357.netlify.app/",
   "name": "ryan.y.pinto",
   "version": "0.1.0",
   "private": true,
